[package]
name = "dl_authorize"
version = "0.1.0"
edition = "2021"
authors = ["Hazel Rowell"]
description = "git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.7.14"
ic-cdk = "0.5.2"
ic-cdk-macros = "0.5.2"
ic-stable-structures = "0.5.1"
serde = "1.0.152"
serde_json = "1.0.93"
typed-builder = "0.12.0"